HighlightInfo: encapsulate quickfixRanges/Markers to avoid overexposure which leads to thread-safety problems and prevents refactoring to lazy quickfixes
GitOrigin-RevId: e255ebe5a4d07507c94be43c9bfc672dfc1309b0